--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <link rel="stylesheet" href="css/master.css">
+    <script src="js/bundle.js"></script>
     <meta charset="utf-8">
-    <title></title>
+    <title>Ghibli Films</title>
   </head>
   <body>
 
