pubsub'd to display view

--- a/public/index.html
+++ b/public/index.html
@@ -8,5 +8,14 @@
   </head>
   <body>
 
+    <h1>Ghibli Films</h1>
+    
+    <select class="" name="">
+      <option value=""></option>
+    </select>
+
+    <section id="display-section">
+
+    </section>
   </body>
 </html>
