create and populate select element/view

--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,8 @@
   <body>
 
     <h1>Ghibli Films</h1>
-    
-    <select class="" name="">
+
+    <select id="film-select" name="">
       <option value=""></option>
     </select>
 
